[metadata]
name = ezra-bible-search
version = 0.9.0
author = Ken Hung
author_email = eiekenhung@gmail.com
description = Semantic Search Engine for Chinese Bible
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KenHung/ezra-bible-search/
project_urls =
    Bug Tracker = https://github.com/KenHung/ezra-bible-search/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: AGPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
include_package_data = True
install_requires = 
    Flask
    tables
    OpenCC>=1.1.3
    jieba
python_requires = >=3.8

[options.packages.find]
where = 
